# xatu

./: .gitignore  .pre-commit-config.yaml  .travis.yml  docker-compose.yml  makefile  manage.py  pyproject.toml  readme.md
cli/: arango.py
cli/arango/: __init__.py  build.py  drop.py
xatu/: asgi.py  router.py  settings.py
xatu/connections/: arango.py
xatu/controllers/: __init__.py  health.py
xatu/controllers/tests/: test_healt.py
xatu/core/: abstracts.py  mixins.py  testing.py
xatu/core/tests/: test_abstracts.py  test_mixins.py
xatu/data/: __init__.py  graphs.py  relations.py
xatu/factories/: graphs.py  models.py
xatu/models/: __init__.py  company.py  item.py  user.py
